ngrx basic example setup

--- a/angular.json
+++ b/angular.json
@@ -136,5 +136,8 @@
       }
     }
   },
-  "defaultProject": "ngrx-example"
+  "defaultProject": "ngrx-example",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
